# SeaguardEmbbededSoftware-0.0.0

./: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  config.h  draft_1.c  draft_main.c  draft_mqtt.c  idf_component.yml  main.c  motor_out.c  motor_out.h  mqtt_mgr.c  mqtt_mgr.h  rc_input.c  rc_input.h  sensor_data.c  sensor_data.h  sensors_mgr.c  sensors_mgr.h  wifi_mgr.c  wifi_mgr.h
