idf_component_register(
    SRCS
        "app_main.c"
        "wifi_mgr.c"
        "mqtt_mgr.c"
        "sensors_mgr.c"
        "sensor_data.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_adc
        esp_hw_support
        esp_timer
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        mqtt
        cjson
        onewire_bus
        ds18b20
        dht
)
